# pokersim

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  README.md  todo.txt
.github/workflows/: cmake-macos-latest.yml  cmake-ubuntu-latest.yml  cmake-windows-latest.yml
include/: Card.h  Deck.h  Player.h  Table.h
mod/: CMakeLists.txt  Card.cppm  Deck.cppm
src/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Player.cpp  Player.hpp  Table.cpp  Table.hpp  main.cpp
test/: CMakeLists.txt  test-card.cxx  test-deck.cxx
